fixed spacing around the red violator

--- a/service/sr-careplanner/src/styles.less
+++ b/service/sr-careplanner/src/styles.less
@@ -185,6 +185,7 @@ cursor:pointer;
 
 .unconfirmedEmailAddressNotification{
 background:red;height:15px;width:100%;font-size:8pt;text-align:center;color:white;
+margin-bottom:10px;
 }
 
 .showResendNotificationContainer{
